--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <div id="clock">8:18:45</div>
+    <div
+      id="clock"
+      style="
+        font-size: 200px;
+        margin-top: 300px;
+        margin-left: 300px;
+        margin-right: 300px;
+        color: rebeccapurple;
+        border: 1px dotted red;
+        background-color: rgb(222, 248, 239);
+        text-align: center;
+      "
+    >
+      0:00:00
+    </div>
     <script type="text/javascript">
       function showTime() {
         var time = new Date();
@@ -17,15 +31,15 @@
 
         if (hr > 12) {
           hr -= 12;
-          pm_am = "PM"
+          pm_am = "PM";
         }
         if (hr == 0) {
           hr = 12;
         }
 
         hr = hr < 10 ? "0" + hr : hr;
-        min = min < 10 ? "0"+min : min;
-        sec = sec < 10 ? "0"+sec : sec;
+        min = min < 10 ? "0" + min : min;
+        sec = sec < 10 ? "0" + sec : sec;
 
         var currentTime = hr + ":" + min + ":" + sec + " " + pm_am;
 
@@ -33,7 +47,6 @@
         setTimeout(showTime, 1000);
       }
       showTime();
-      
     </script>
   </body>
 </html>
